--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-react": "^7.23.1",
     "file-loader": "^6.2.0",
     "jest": "^26.6.3",
+    "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^2.1.0",
     "postcss": "^8.2.10",
     "postcss-loader": "^5.2.0",
@@ -57,7 +58,6 @@
     "remove-files-webpack-plugin": "^1.4.5",
     "resize-observer-polyfill": "^1.5.0",
     "sass": "^1.35.2",
-    "lodash-es": "^4.17.21",
     "sass-loader": "^12.1.0",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
@@ -69,5 +69,6 @@
     "react": "^16.0.0 || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {
+    "aws-amplify": "^5.0.19"
   }
 }
